--- a/lab2/maket_table.html
+++ b/lab2/maket_table.html
@@ -23,12 +23,12 @@
     <table>
         <tbody>
             <tr>
-                <td colspan=3 style="text-align: center; padding: 20px; background-color: gray">
+                <td colspan=3 style="text-align: center; background-color: rgb(225, 225, 225); padding: 30px">
                     <h1>Welcome to Transport Company</h1>
                 </td>
             </tr>
             <tr>
-                <td style="width: 15%; background-color: rgb(197, 197, 197); padding: 20px; vertical-align: top">
+                <td style="width: 20%; background-color: white; padding: 30px; vertical-align: top">
                     <ul>
                         <li><a href="#services-section">Our services</a></li>
                         <li><a href="#choose-us">Why Choose Us</a></li>
@@ -37,7 +37,7 @@
                         <li><a href="#safety-compliance">Safety & Compliance</a></li>
                     </ul>
                 </td>
-                <td style="background-color: rgb(168, 168, 168); padding: 20px; vertical-align: top">
+                <td style="background-color: rgb(245, 245, 245); padding: 30px; vertical-align: top">
                     <h2 id="choose-us">Why Choose Us</h2>
                     <p>Learn about the advantages of partnering with us for all your transportation requirements.</p>
                     <ul>
@@ -88,7 +88,7 @@
                         <li>Insurance: Comprehensive insurance coverage for added peace of mind.</li>
                     </ul>
                 </td>
-                <td style="width: 200px; background-color: rgb(197, 197, 197); padding: 20px; vertical-align: top">
+                <td style="width: 200px; background-color: white; padding: 30px; vertical-align: top">
                     <h2 id="services-section">Our services</h2>
                     <p>Explore our comprehensive range of transportation solutions tailored to meet your needs.</p>
                     <ul>
@@ -101,7 +101,7 @@
                 </td>
             </tr>
             <tr>
-                <td colspan=3 style="background-color: rgb(229, 229, 229); padding: 20px">
+                <td colspan=3 style="background-color: rgb(225, 225, 225); padding: 30px">
                     <p>Contact us today to discuss your transportation needs and discover how we can assist you in achieving your goals.</p>
                     <ul>
                         <li>Contact Information: Find our contact details for inquiries and consultations.</li>
