Fix colors and structure

--- a/lab2/maket_div.html
+++ b/lab2/maket_div.html
@@ -20,11 +20,11 @@
     </style>
 </head>
 <body>
-    <div colspan=3 style="text-align: center; background-color: gray">
+    <div colspan=3 style="text-align: center; background-color: rgb(225, 225, 225); padding: 30px">
         <h1>Welcome to Transport Company</h1>
     </div>
 
-                <div style="width: 15%; float: left; background-color: rgb(197, 197, 197)">
+                <div style="width: 15%; float: left; background-color: white; padding: 30px">
                     <ul>
                         <li><a href="#services-section">Our services</a></li>
                         <li><a href="#choose-us">Why Choose Us</a></li>
@@ -34,7 +34,19 @@
                     </ul>
                 </div>
 
-                <div style="margin-left: 16%; margin-right: 250px; background-color: rgb(168, 168, 168)">
+                <div style="width: 200px; float: right; background-color: white; padding: 30px">
+                    <h2 id="services-section">Our services</h2>
+                    <p>Explore our comprehensive range of transportation solutions tailored to meet your needs.</p>
+                    <ul>
+                        <li>Shipping: Efficient and reliable shipping services for your goods, ensuring timely delivery.</li>
+                        <li>Logistics: Streamlined logistics solutions to optimize your supply chain and reduce costs.</li>
+                        <li>Warehousing: Secure and spacious warehousing facilities to accommodate your inventory needs.</li>
+                        <li>Freight Forwarding: Seamless freight forwarding services to simplify your global shipments.</li>
+                        <li>Specialized Transport: Customized transport solutions for oversized, delicate, or specialized cargo.</li>
+                    </ul>
+                </div>
+
+                <div style="margin-left: 20%; margin-right: 215px; background-color: rgb(245, 245, 245); padding: 30px">
                     <h2 id="choose-us">Why Choose Us</h2>
                     <p>Learn about the advantages of partnering with us for all your transportation requirements.</p>
                     <ul>
@@ -86,19 +98,7 @@
                     </ul>
                 </div>
 
-                <div style="width: 200px; float: right; background-color: rgb(197, 197, 197)">
-                    <h2 id="services-section">Our services</h2>
-                    <p>Explore our comprehensive range of transportation solutions tailored to meet your needs.</p>
-                    <ul>
-                        <li>Shipping: Efficient and reliable shipping services for your goods, ensuring timely delivery.</li>
-                        <li>Logistics: Streamlined logistics solutions to optimize your supply chain and reduce costs.</li>
-                        <li>Warehousing: Secure and spacious warehousing facilities to accommodate your inventory needs.</li>
-                        <li>Freight Forwarding: Seamless freight forwarding services to simplify your global shipments.</li>
-                        <li>Specialized Transport: Customized transport solutions for oversized, delicate, or specialized cargo.</li>
-                    </ul>
-                </div>
-
-                <div colspan=3 style="clear: both; background-color: rgb(229, 229, 229)">
+                <div colspan=3 style="clear: both; background-color: rgb(225, 225, 225); padding: 30px">
                     <p>Contact us today to discuss your transportation needs and discover how we can assist you in achieving your goals.</p>
                     <ul>
                         <li>Contact Information: Find our contact details for inquiries and consultations.</li>
