--- a/lab4/transport_com.html
+++ b/lab4/transport_com.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>cats</title>
+    <title>Transport Company</title>
     <script src="transport_com.js"></script>
     <link rel="stylesheet" href="transport_com.css">
   </head>
